# Alfred2

./: .env.example  .gitignore  CLAUDE.md  README.md  migrationplan.md  nixpacks.toml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
alfred/: config.py  logging.py  main.py
alfred/agent/: base.py  classifier.py  client.py  context.py  error_tracker.py  errors.py  history.py  loop.py  orchestrator.py  prompt_sections.py  prompts.py  recovery.py  router.py  tools.py
alfred/bot/: admin_handlers.py  app.py  handlers.py  keyboards.py  oauth_routes.py  signing.py  voice.py
alfred/db/: client.py  types.py
alfred/integrations/: __init__.py  base.py  google_calendar.py  registry.py
alfred/jobs/: digest.py  nudge.py
alfred/services/: access.py  alerts.py  calendar.py  contacts.py  google_calendar.py  import_contacts.py  import_csv.py  interactions.py  limits.py  memories.py  nudges.py  oauth.py  usage.py
supabase/: config.toml
supabase/migrations/: 0001_schema.sql  0002_rls.sql  0003_pg_cron_nudges.sql  0004_digest_cron.sql  0005_cleanup_and_weekday.sql  0006_contact_relationships.sql  0007_api_usage.sql  0008_follow_up_note.sql  0009_multi_tenant_users.sql  (+6 more)
tests/: conftest.py  test_calendar.py  test_classifier.py  test_contacts.py  test_date_confirmation.py  test_errors.py  test_google_calendar.py  test_guardrail_queries.py  test_handlers.py  test_import_contacts.py  test_integrations.py  test_keyboards.py  test_memory_search.py  test_orchestrator.py  test_prompt_sections.py  test_signing.py  test_timed_follow_ups.py  test_tools.py
(+17 files in other folders)
